--- a/app.css
+++ b/app.css
@@ -60,7 +60,20 @@
   display: table;
 }
 
-/* mobile */
+/* Gallery animation */
+#pokecontainer .pokebox {
+    opacity: 1;
+}
+#pokecontainer .pokebox.ng-enter {
+    -webkit-transition: 1s;
+    transition: 1s;
+    opacity: 0;
+}
+#pokecontainer .pokebox.ng-enter-active {
+    opacity: 1;
+}
+
+/* Mobile */
 @media screen and (max-width: 768px) {
   #pokecontainer{
     width: 280px;
@@ -77,7 +90,7 @@
   }
 }
 
-/* tablet */
+/* Tablet */
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   #pokecontainer{
     width: 340px;
